# advent-of-code

./: README.md
2021/: Makefile  README.md
2021/day1/: Day1P1.java  Day1P2.java
2022/: Makefile  README.md
2022/day1/: day1_p1.cmi  day1_p1.cmx  day1_p2.ml
2023/: Makefile  README.md
2023/day1/: day1_p1.cpp  day1_p2.cpp
2023/day10/: day10_p1.cpp  day10_p2.cpp
2023/day11/: day11_p2.cpp
2023/day2/: day2_p1.cpp  day2_p2.cpp
2023/day3/: day3_p1.cpp  day3_p2.cpp
2023/day4/: day4_p1.cpp  day4_p2.cpp
2023/day5/: day5_p1.cpp  day5_p2.cpp
2023/day6/: day6_p1.cpp  day6_p2.cpp
2023/day7/: day7_p1.cpp  day7_p2.cpp
2023/day8/: day8_p1.cpp  day8_p2.cpp  day8_p2_old.cpp
2023/day9/: day9_p1.cpp  day9_p2.cpp
2024/: AOC_D07.ipynb  AOC_D08.ipynb  AOC_D09.ipynb  AOC_D10.ipynb  AOC_D6.ipynb  AOC_D9.ipynb  Makefile
2024/day1/: day1_p1.py  day1_p2.py
2024/day10/: day10_p1.py  day10_p2.py
2024/day11/: day11_p1.py  day11_p2.py
2024/day12/: day12_p1.py  day12_p2.py
2024/day13/: day13_p1.py  day13_p2.py
2024/day14/: day14_p1.py  day14_p2.py  day14_p3.py
2024/day15/: day15_p1.py  day15_p2.py
2024/day16/: day16_p1.py  day16_p1_bfs.py  day16_p2.py
2024/day17/: day17_p1.py  day17_p2.py  day17_p3.py
2024/day18/: day18_p1.py  day18_p2.py
2024/day19/: day19_p1.py  day19_p2.py  day19_p3.py
2024/day2/: day2_p1.py  day2_p2.py
2024/day20/: day20_p1.py  day20_p2.py
2024/day21/: day21_p1.py  day21_p2.py
2024/day22/: day22_p1.py  day22_p2.py
2024/day23/: day23_p1.py  day23_p2.py  (+1 more)
2025/: Cargo.toml  Makefile  README.md  generate_cargo_toml.sh
(+19 files in other folders)
