[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[dependencies]
counter = "0.7.0"
min-max-heap = "1.3.0"
mut-binary-heap = "0.1.0"

[[bin]]
name = "day1_p1"
path = "src/bin/day1/day1_p1.rs"

[[bin]]
name = "day1_p2"
path = "src/bin/day1/day1_p2.rs"

[[bin]]
name = "day2_p1"
path = "src/bin/day2/day2_p1.rs"

[[bin]]
name = "day2_p2"
path = "src/bin/day2/day2_p2.rs"

[[bin]]
name = "day3_p1"
path = "src/bin/day3/day3_p1.rs"

[[bin]]
name = "day3_p2"
path = "src/bin/day3/day3_p2.rs"

[[bin]]
name = "day4_p1"
path = "src/bin/day4/day4_p1.rs"

[[bin]]
name = "day4_p2"
path = "src/bin/day4/day4_p2.rs"

[[bin]]
name = "day5_p1"
path = "src/bin/day5/day5_p1.rs"

[[bin]]
name = "day5_p2"
path = "src/bin/day5/day5_p2.rs"

[[bin]]
name = "day5_p3"
path = "src/bin/day5/day5_p3.rs"

[[bin]]
name = "day6_p1"
path = "src/bin/day6/day6_p1.rs"

[[bin]]
name = "day6_p2"
path = "src/bin/day6/day6_p2.rs"

[[bin]]
name = "day7_p1"
path = "src/bin/day7/day7_p1.rs"

[[bin]]
name = "day7_p2"
path = "src/bin/day7/day7_p2.rs"

[[bin]]
name = "day7_p3"
path = "src/bin/day7/day7_p3.rs"
